--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <button type="button" data-action="start">Start</button>
     <button type="button" data-action="stop">Stop</button>
 
-    <script src="./js/index.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
 </body>
 </html>
